--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./social-media-marketing.jpg" class="float-left" />
+            <img src="./social-media-marketing.jpg" alt="Six people around the table working with laptops on social media" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
