Changed socila media marketing paragraph to a black color to be easier to read by the user CSS document line 161

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </header>
-    <section class="hero"></section>
+    <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./search-engine-optimization.jpg" alt="A table with a book, a container with pens, a cup of coffe and a laptop" class="float-left" />
